// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Textarea /> is checked shouldComponentUpdate 1`] = `
<div
  className="textarea textarea_error textarea_color_default"
>
  <div
    className="textarea__field-wrapper"
  >
    <div>
      <textarea
        autoComplete="off"
        className="textarea__field textarea__field_textarea"
      />
    </div>
  </div>
  <div
    className="textarea__text textarea__text_error"
  >
    text
  </div>
</div>
`;

exports[`<Textarea /> is checked shouldComponentUpdate with new props 1`] = `
<div
  className="textarea textarea_color_default"
>
  <div
    className="textarea__field-wrapper"
  >
    <div>
      <textarea
        autoComplete="off"
        className="textarea__field textarea__field_textarea"
      />
    </div>
  </div>
</div>
`;

exports[`<Textarea /> it renders Textarea 1`] = `
<div
  className="textarea textarea_color_default"
>
  <div
    className="textarea__field-wrapper"
  >
    <div>
      <textarea
        autoComplete="off"
        className="textarea__field textarea__field_textarea"
      />
    </div>
  </div>
</div>
`;

exports[`<Textarea /> it renders error icon 1`] = `
<div
  className="textarea textarea_error textarea_color_default"
>
  <div
    className="textarea__field-wrapper"
  >
    <div>
      <textarea
        autoComplete="off"
        className="textarea__field textarea__field_textarea"
      />
    </div>
  </div>
  <div
    className="textarea__text textarea__text_error"
  >
    text
  </div>
</div>
`;

exports[`<Textarea /> it renders texts 1`] = `
<div
  className="textarea textarea_color_default"
>
  <div
    className="textarea__field-wrapper"
  >
    <div>
      <textarea
        autoComplete="off"
        className="textarea__field textarea__field_textarea"
      />
    </div>
  </div>
  <div
    className="textarea__text textarea__text_comment"
  >
    text
  </div>
  <div
    className="textarea__text textarea__text_success"
  >
    text
  </div>
</div>
`;

exports[`<Textarea /> it renders valid icon 1`] = `
<div
  className="textarea textarea_valid textarea_color_default"
>
  <div
    className="textarea__field-wrapper"
  >
    <div>
      <textarea
        autoComplete="off"
        className="textarea__field textarea__field_textarea"
      />
    </div>
  </div>
  <div
    className="textarea__text textarea__text_error"
  >
    text
  </div>
</div>
`;

exports[`<Textarea /> it renders without error icon 1`] = `
<div
  className="textarea textarea_error textarea_color_default"
>
  <div
    className="textarea__field-wrapper"
  >
    <div>
      <textarea
        autoComplete="off"
        className="textarea__field textarea__field_textarea"
      />
    </div>
  </div>
</div>
`;

exports[`<Textarea /> it renders without valid icon 1`] = `
<div
  className="textarea textarea_valid textarea_color_default"
>
  <div
    className="textarea__field-wrapper"
  >
    <div>
      <textarea
        autoComplete="off"
        className="textarea__field textarea__field_textarea"
      />
    </div>
  </div>
</div>
`;
